优化调整前备份
